# lapack

./: .gitignore  .project  CMakeLists.txt
BLAS/: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt
BLAS/TESTING/: CMakeLists.txt
CBLAS/: CMakeLists.txt
CBLAS/testing/: CMakeLists.txt
CMAKE/: FortranMangling.cmake
LAPACKE/: CMakeLists.txt
SRC/: CMakeLists.txt
TESTING/: CMakeLists.txt
TESTING/EIG/: CMakeLists.txt
TESTING/LIN/: CMakeLists.txt
TESTING/MATGEN/: CMakeLists.txt
